# mp4muxdemux

./: README.md
src/: AacDecode.cpp  AacDecode.h  CMakeLists.txt  CMp4Decoder.cpp  CMp4Decoder.h  MP4Encoder.cpp  MP4Encoder.h  main.cpp
third_lib/faad2-2.7-x86-64-gnu/lib/: libfaad.la
third_lib/mp4v2-x86-64-gun/include/mp4v2/: project.h
third_lib/mp4v2-x86-64-gun/lib/: libmp4v2.la  libmp4v2.so.2
